--- a/apps/consoledot/.env
+++ b/apps/consoledot/.env
@@ -1,2 +1,2 @@
 SERVICE_KEY=CIAM_Authz
-BASE_URL=https://ciam-authz-hw-ciam-authz--runtime-ext.apps.ext.spoke.preprod.us-east-1.aws.paas.redhat.com
+BASE_URL=https://ciam-authz-hw-ciam-authz--runtime-ext.apps.ext.spoke.prod.us-east-1.aws.paas.redhat.com/
