--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "jest --passWithNoTests",
     "postinstall": "rimraf .cache",
     "verify": "npm-run-all build lint test",
-    "storybook": "start-storybook -p 6006 -s public",
+    "storybook": "storybook dev -p 6006",
     "build-storybook": "build-storybook",
     "mock-server:run": "json-server --routes mock-routes.json",
     "mock-server:negative-seats": "npm run mock-server:run -- --watch db-negative-seats.json",
@@ -32,7 +32,7 @@
     "@redhat-cloud-services/frontend-components": "^3.9.25",
     "@redhat-cloud-services/frontend-components-notifications": "^3.2.12",
     "@redhat-cloud-services/frontend-components-utilities": "^3.3.7",
-    "@rhoas/app-services-ui-components": "2.20.5",
+    "@rhoas/app-services-ui-components": "^2.20.7",
     "@tanstack/react-query": "4.24.10",
     "classnames": "^2.3.1",
     "react": "17.0.2",
@@ -54,14 +54,13 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@redhat-cloud-services/eslint-config-redhat-cloud-services": "^1.2.6",
     "@redhat-cloud-services/frontend-components-config": "^4.6.33",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-essentials": "^7.0.0-rc.8",
+    "@storybook/addon-interactions": "^7.0.0-rc.8",
+    "@storybook/addon-links": "^7.0.0-rc.8",
+    "@storybook/blocks": "^7.0.0-rc.8",
+    "@storybook/react": "^7.0.0-rc.8",
+    "@storybook/react-vite": "^7.0.0-rc.8",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/react": "17.0.39",
@@ -73,6 +72,7 @@
     "babel-jest": "27.0.5",
     "babel-loader": "^8.3.0",
     "babel-plugin-transform-imports": "^2.0.0",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "8.18.0",
     "eslint-plugin-storybook": "^0.6.11",
     "identity-obj-proxy": "3.0.0",
@@ -81,8 +81,10 @@
     "msw": "0.49.3",
     "msw-storybook-addon": "1.7.0",
     "npm-run-all": "4.1.5",
+    "oazapfts": "^4.7.1",
     "prop-types": "15.7.2",
     "rimraf": "^3.0.2",
+    "storybook": "^7.0.0-rc.8",
     "stylelint": "13.13.1",
     "stylelint-config-recommended-scss": "4.2.0",
     "stylelint-scss": "3.19.0",
