--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-plugin-transform-imports": "^2.0.0",
     "dotenv-webpack": "^8.0.1",
     "eslint": "8.18.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.0.5",
