--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postinstall": "rimraf .cache",
     "verify": "npm-run-all build lint test",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "build-storybook",
+    "build-storybook": "storybook build",
     "mock-server:run": "json-server --routes mock-routes.json",
     "mock-server:negative-seats": "npm run mock-server:run -- --watch db-negative-seats.json",
     "mock-server:no-seats": "npm run mock-server:run -- --watch db-no-seats.json",
@@ -54,13 +54,13 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@redhat-cloud-services/eslint-config-redhat-cloud-services": "^1.2.6",
     "@redhat-cloud-services/frontend-components-config": "^4.6.33",
-    "@storybook/addon-essentials": "^7.0.0-rc.8",
-    "@storybook/addon-interactions": "^7.0.0-rc.8",
-    "@storybook/addon-links": "^7.0.0-rc.8",
-    "@storybook/blocks": "^7.0.0-rc.8",
-    "@storybook/react": "^7.0.0-rc.8",
-    "@storybook/react-vite": "^7.0.0-rc.8",
-    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
+    "@storybook/blocks": "^7.1.0",
+    "@storybook/react": "^7.1.0",
+    "@storybook/react-vite": "^7.1.0",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/react": "17.0.39",
@@ -75,17 +75,17 @@
     "dotenv-webpack": "^8.0.1",
     "eslint": "8.18.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-storybook": "^0.6.12",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.0.5",
     "json-server": "0.17.2",
     "msw": "0.49.3",
-    "msw-storybook-addon": "1.7.0",
+    "msw-storybook-addon": "1.8.0",
     "npm-run-all": "4.1.5",
     "oazapfts": "^4.7.1",
     "prop-types": "15.7.2",
     "rimraf": "^3.0.2",
-    "storybook": "^7.0.0-rc.8",
+    "storybook": "^7.1.0",
     "stylelint": "13.13.1",
     "stylelint-config-recommended-scss": "4.2.0",
     "stylelint-scss": "3.19.0",
