--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "mock-server:empty-seats": "npm run mock-server:run -- --watch db-empty-seats.json"
   },
   "dependencies": {
-    "@patternfly/react-core": "^4.267.6",
-    "@patternfly/react-table": "^4.112.39",
-    "@redhat-cloud-services/frontend-components": "^3.11.2",
-    "@redhat-cloud-services/frontend-components-notifications": "^3.2.12",
-    "@redhat-cloud-services/frontend-components-utilities": "^3.3.7",
-    "@rhoas/app-services-ui-components": "^2.31.1",
+    "@patternfly/react-core": "4.276.8",
+    "@patternfly/react-table": "4.113.0",
+    "@redhat-cloud-services/frontend-components": "3.11.2",
+    "@redhat-cloud-services/frontend-components-notifications": "3.2.14",
+    "@redhat-cloud-services/frontend-components-utilities": "3.7.4",
+    "@rhoas/app-services-ui-components": "2.31.1",
     "@tanstack/react-query": "4.24.10",
     "classnames": "^2.3.1",
     "react": "17.0.2",
@@ -52,8 +52,8 @@
     "@babel/preset-typescript": "^7.17.12",
     "@patternfly/patternfly": "^4.224.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
-    "@redhat-cloud-services/eslint-config-redhat-cloud-services": "^1.2.6",
-    "@redhat-cloud-services/frontend-components-config": "^4.6.33",
+    "@redhat-cloud-services/eslint-config-redhat-cloud-services": "1.3.0",
+    "@redhat-cloud-services/frontend-components-config": "5.1.0",
     "@storybook/addon-essentials": "^7.1.0",
     "@storybook/addon-interactions": "^7.1.0",
     "@storybook/addon-links": "^7.1.0",
@@ -90,7 +90,8 @@
     "stylelint-config-recommended-scss": "4.2.0",
     "stylelint-scss": "3.19.0",
     "typescript": "^4.7.4",
-    "webpack-bundle-analyzer": "4.4.2"
+    "webpack-bundle-analyzer": "4.4.2",
+    "webpack-cli": "^5.1.4"
   },
   "insights": {
     "appname": "seats-admin"
