--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rhoas/app-services-ui-components": "2.31.1",
     "@tanstack/react-query": "4.24.10",
     "classnames": "^2.3.1",
+    "lodash.orderby": "^4.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.9",
