--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@types/lodash.filter": "^4.6.7",
+    "@types/lodash.orderby": "^4.6.7",
     "@types/react": "17.0.39",
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "5.3.3",
