--- a/package.json
+++ b/package.json
@@ -27,18 +27,17 @@
     "mock-server:empty-seats": "npm run mock-server:run -- --watch db-empty-seats.json"
   },
   "dependencies": {
-    "@patternfly/react-core": "4.276.8",
-    "@patternfly/react-table": "4.113.0",
+    "@patternfly/react-core": "4.276.11",
+    "@patternfly/react-table": "4.113.3",
     "@redhat-cloud-services/frontend-components": "3.11.2",
     "@redhat-cloud-services/frontend-components-notifications": "3.2.14",
     "@redhat-cloud-services/frontend-components-utilities": "3.7.4",
-    "@rhoas/app-services-ui-components": "2.31.1",
     "@tanstack/react-query": "4.24.10",
     "classnames": "^2.3.1",
     "lodash.filter": "^4.6.0",
     "lodash.orderby": "^4.6.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-redux": "7.2.9",
     "react-router-dom": "5.3.4",
     "redux": "4.2.0",
@@ -52,25 +51,25 @@
     "@babel/preset-env": "7.14.7",
     "@babel/preset-react": "7.14.5",
     "@babel/preset-typescript": "^7.17.12",
-    "@patternfly/patternfly": "^4.224.2",
+    "@patternfly/patternfly": "4.224.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@redhat-cloud-services/eslint-config-redhat-cloud-services": "1.3.0",
     "@redhat-cloud-services/frontend-components-config": "5.1.0",
-    "@storybook/addon-essentials": "^7.1.0",
-    "@storybook/addon-interactions": "^7.1.0",
-    "@storybook/addon-links": "^7.1.0",
-    "@storybook/blocks": "^7.1.0",
-    "@storybook/react": "^7.1.0",
-    "@storybook/react-vite": "^7.1.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@types/lodash.filter": "^4.6.7",
-    "@types/lodash.orderby": "^4.6.7",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "^18.0.5",
+    "@storybook/addon-essentials": "7.2.1",
+    "@storybook/addon-interactions": "7.2.1",
+    "@storybook/addon-links": "7.2.1",
+    "@storybook/blocks": "7.2.1",
+    "@storybook/react": "7.2.1",
+    "@storybook/react-vite": "7.2.1",
+    "@storybook/testing-library": "0.2.0",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "14.0.0",
+    "@types/lodash.filter": "4.6.7",
+    "@types/lodash.orderby": "4.6.7",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7",
     "@types/react-router-dom": "5.3.3",
-    "@types/redux-logger": "^3.0.9",
+    "@types/redux-logger": "3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "27.0.5",
