Attempt to switch back to AMS (guessing here)

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SERVICE_KEY=CIAM_Authz
-BASE_URL=https://ciam-authz-hw-ciam-authz--runtime-ext.apps.ext.spoke.preprod.us-east-1.aws.paas.redhat.com
+SERVICE_KEY=entitlements
+BASE_URL=https://console.stage.redhat.com/api/entitlements/v1/
