--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -31,7 +31,7 @@ jobs:
       with:
         browser: chrome
         record: true
-        config-file: cypress.config.ts
+        config: baseUrl=https://prod.foo.redhat.com:1337/ansible/seats-administration, env={passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}, passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}}
     
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
