--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -20,8 +20,13 @@ jobs:
     - name: add prod to hosts file
       run: echo 127.0.0.1 prod.foo.redhat.com | sudo tee -a /etc/hosts 
     
-    - name: Install root dependencies
-      uses: bahmutov/npm-install@v1
+    - name: Use Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20.5.1'
+        
+    - name: Install dependencies
+      run: npm ci
 
     - name: Start server
       run: | 
