change env vars

--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -34,8 +34,10 @@ jobs:
         start: npm run start:prod:beta
         browser: chrome
         record: true
-        env: passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}, passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
         config-file: cypress-github.config.ts
+      env: 
+        passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
+        passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
     
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
