--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -28,6 +28,10 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Write the cypress.env.json file
+      run: |
+        echo '${{ secrets.CYPRESS_ENV }}' > cypress.env.json
+
     - name: Cypress run
       uses: cypress-io/github-action@v6
       with:
@@ -35,9 +39,6 @@ jobs:
         browser: chrome
         record: true
         config-file: cypress-github.config.ts
-      env: 
-        passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
-        passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
     
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
