--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -13,6 +13,9 @@ jobs:
   build:
     name: Cypress tests
     runs-on: ubuntu-20.04
+    env:
+      cypress_passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
+      cypress_passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
 
     steps:
     - uses: actions/checkout@v3
@@ -27,10 +30,6 @@ jobs:
         
     - name: Install dependencies
       run: npm ci
-
-    - name: Write the cypress.env.json file
-      run: |
-        echo '${{ secrets.CYPRESS_ENV }}' > cypress.env.json
 
     - name: Cypress run
       uses: cypress-io/github-action@v6
