--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -14,8 +14,8 @@ jobs:
     name: Cypress tests
     runs-on: ubuntu-20.04
     env:
-      cypress_passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
-      cypress_passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
+      CYPRESS_passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
+      CYPRESS_passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
 
     steps:
     - uses: actions/checkout@v3
