--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -30,12 +30,14 @@ jobs:
 
     - name: Cypress run
       uses: cypress-io/github-action@v6
+      env:
+        CYPRESS_passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
+        CYPRESS_passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
       with:
         start: npm run start:prod:beta
         browser: chrome
         record: true
         config-file: cypress-github.config.ts
-        env: CYPRESS_passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}, CYPRESS_passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
     
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
