trying call to secrets #6

--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -13,9 +13,6 @@ jobs:
   build:
     name: Cypress tests
     runs-on: ubuntu-20.04
-    env:
-      passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
-      passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
 
     steps:
     - uses: actions/checkout@v3
@@ -33,14 +30,12 @@ jobs:
 
     - name: Cypress run
       uses: cypress-io/github-action@v6
-      env:
-        CYPRESS_passwordAdmin: ${{ env.passwordAdmin }}
-        CYPRESS_passwordUser: ${{ env.passwordUser }}
       with:  
         start: npm run start:prod:beta
         browser: chrome
         record: true
         config-file: cypress-github.config.ts
+        env: passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}, passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
     
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
