--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -30,13 +30,16 @@ jobs:
 
     - name: Cypress run
       uses: cypress-io/github-action@v6
-      with:  
+      with:
+        env: true
         start: npm run start:prod:beta
         browser: chrome
         record: true
         config-file: cypress-github.config.ts
-        env: passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}, passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
-    
+      env: 
+        CYPRESS_passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
+        CYPRESS_passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
+
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
       with:
