--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -31,7 +31,7 @@ jobs:
     - name: Cypress run
       uses: cypress-io/github-action@v6
       with:
-        env: true
+        env: configFile=ci
         start: npm run start:prod:beta
         browser: chrome
         record: true
