expand the command to cypress action

--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -31,11 +31,8 @@ jobs:
     - name: Cypress run
       uses: cypress-io/github-action@v4
       with:
-        command: npx cypress run --env passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }},passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
+        command: npx cypress run --env passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }},passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }} --config-file cypress-github.config.ts --browser chrome --record
         start: npm run start:prod:beta
-        browser: chrome
-        record: true
-        config-file: cypress-github.config.ts
 
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
