--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -25,14 +25,19 @@ jobs:
       with:
         node-version: '20.5.1'
         
-    - name: Install dependencies
-      run: npm ci
+    - name: Install dependencies and run server at the background
+      run: | 
+        npm ci
+        npm run start:prod:beta &
 
-    - name: Cypress run
-      uses: cypress-io/github-action@v4
-      with:
-        command: npx cypress run --env passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }},passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }} --config-file cypress-github.config.ts --browser chrome --record
-        start: npm run start:prod:beta
+    - name: Sleep for 120 seconds
+      run: sleep 120s
+      shell: bash
+
+    - name: Cypress install & run
+      run: |
+        npm install cypress --save-dev
+        npx cypress run --env passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }},passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }} --config-file cypress-github.config.ts --browser chrome --record
 
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
