--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -13,6 +13,9 @@ jobs:
   build:
     name: Cypress tests
     runs-on: ubuntu-20.04
+    env:
+      CYPRESS_passwordAdmin: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
+      CYPRESS_passwordUser: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
 
     steps:
     - uses: actions/checkout@v3
@@ -37,7 +40,7 @@ jobs:
     - name: Cypress install & run
       run: |
         npm install cypress --save-dev
-        npx cypress run --env passwordAdmin=${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }},passwordUser=${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }} --config-file cypress-github.config.ts --browser chrome --record
+        npx cypress run --config-file cypress-github.config.ts --browser chrome --record
 
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
