--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -40,7 +40,7 @@ jobs:
     - name: Cypress install & run
       run: |
         npm install cypress --save-dev
-        npx cypress run --config-file cypress-github.config.ts --browser chrome --record
+        npx cypress run --config-file cypress-github.config.ts CYPRESS_passwordAdmin=$CYPRESS_passwordAdmin CYPRESS_passwordUser=$CYPRESS_passwordUser --browser chrome --record
 
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
