--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -8,6 +8,9 @@ on:
       - main
   # have the ability to trigger this workflow manually
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      # Defaults
 
 jobs:
   build:
