--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -3,27 +3,16 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
   # have the ability to trigger this workflow manually
   workflow_dispatch:
-  workflow_call:
-    secrets:
-      LIGHTSPEED_ORG_ADMIN_PASSWORD:
-        description: 'an org admin password for login'
-        required: true
-      LIGHTSPEED_TEST_USER_PASSWORD:
-        description: 'a user password for login'
-        required: true
 
 jobs:
   build:
     name: Cypress tests
     runs-on: ubuntu-20.04
     env:
-      CYPRESS_PASSWORD_ADMIN: "${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}"
-      CYPRESS_PASSWORD_USER: "${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}"
+      CYPRESS_PASSWORD_ADMIN: ${{ secrets.LIGHTSPEED_ORG_ADMIN_PASSWORD }}
+      CYPRESS_PASSWORD_USER: ${{ secrets.LIGHTSPEED_TEST_USER_PASSWORD }}
 
     steps:
     - uses: actions/checkout@v3
@@ -48,7 +37,7 @@ jobs:
     - name: Cypress install & run
       run: |
         npm install cypress --save-dev
-        npx cypress run --config-file cypress-github.config.ts --browser chrome --record
+        npx cypress run --config-file cypress-github.config.ts --browser chrome
 
     - name: Upload Cypress screenshots test results
       uses: actions/upload-artifact@v3
